--- a/app/src/main/res/layout/activity_creates_profile.xml
+++ b/app/src/main/res/layout/activity_creates_profile.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".Add_activity.Add_donorActivity">
+    tools:context=".Others.Creates_profile">
+
     <android.support.v7.widget.CardView
         android:layout_marginTop="@dimen/_110sdp"
         android:layout_width="match_parent"
@@ -30,7 +30,7 @@
             </include>
 
             <LinearLayout
-                android:padding="@dimen/_2sdp"
+                android:padding="@dimen/_1sdp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -60,7 +60,7 @@
 
             </LinearLayout>
             <LinearLayout
-                android:padding="2dp"
+                android:padding="@dimen/_1sdp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -101,7 +101,7 @@
                     app:layout_constraintVertical_bias="0.238" />
             </LinearLayout>
             <LinearLayout
-                android:padding="2dp"
+                android:padding="@dimen/_1sdp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -152,7 +152,7 @@
                     app:layout_constraintVertical_bias="0.372" />
             </LinearLayout>
             <LinearLayout
-                android:padding="2dp"
+                android:padding="@dimen/_1sdp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -188,7 +188,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:padding="2dp"
+                android:padding="@dimen/_1sdp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -239,7 +239,7 @@
 
 
             <LinearLayout
-                android:padding="2dp"
+                android:padding="@dimen/_1sdp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -296,8 +296,8 @@
                 android:layout_marginBottom="@dimen/_10sdp"
                 android:background="@drawable/confirm_button_design"
                 android:text="Done"
-                 />
+                />
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
