--- a/app/src/main/res/layout/activity_view_activity.xml
+++ b/app/src/main/res/layout/activity_view_activity.xml
@@ -48,7 +48,7 @@
         android:padding="5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:text="@string/view_donor_list"
+        android:text="Donors"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
